--- a/LakeFinder/index.html
+++ b/LakeFinder/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="addition/css/MarkerCluster.css">
         <link rel="stylesheet" href="addition/css/MarkerCluster.Default.css">
         <link rel="stylesheet" href="addition/css/main.css">
-        <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
+        <script type="text/javascript" src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
 
     </head>
 
@@ -22,12 +22,12 @@
         </div>
 
 
-        <script src="addition/js/survey.js"></script>
+        <script type="text/javascript" src="addition/js/survey.js"></script>
         <script type="text/javascript" src="addition/js/location.js"></script>
         <script type="text/javascript" src="addition/js/leaflet.markercluster.js"></script>
         <script type="text/javascript" src="addition/js/state.js"></script>
         <script type="text/javascript" src="addition/js/data.js"></script>
-        <script src="addition/js/map.js"></script>
+        <script type="text/javascript" src="addition/js/map.js"></script>
 
     </body>
 
