--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -128,16 +128,16 @@ no react
     <div class="panel active" style="background-image: url('img/eth.JPG')">
         <h3> <a href="https://ethmediacreate.com/">ETH Media Create Website</a></h3>
     </div>
-    <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1572276596237-5db2c3e16c5d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80')">
-      <h3>Wild Forest</h3>
+    <div class="panel" style="background-image: url('img/lakefinder.JPG')">
+      <h3><a href="https://kthao91.github.io/LakeFinder/">Lake Finder</a></h3>
     </div>
-    <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1353&q=80')">
-      <h3>Sunny Beach</h3>
+    <div class="panel" style="background-image: url('img/ava.jpg')">
+        <h3><a href="https://avatotoe.com/">Ava Totoe</a>
     </div>
-    <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1551009175-8a68da93d5f9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1351&q=80')">
-      <h3>City on Winter</h3>
+    <div class="panel" style="background-image: url('img/maia.jpg')">
+        <h3><a href="https://maiatotoe.com/">Maia Totoe</a>
     </div>
-    <div class="panel" style="background-image: url('https://images.unsplash.com/photo-1549880338-65ddcdfd017b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80')">
+    <div class="panel" style="background-image: url('')">
       <h3>Mountains - Clouds</h3>
       <p>
         test
@@ -149,11 +149,11 @@ no react
     <!--Work History-->
 
     <div class="slide">
-
+        <div class="exp">
         <h2>Work Experience</h2>
         <div>
-            End Time Harvest Entertainment Studios
-            Web Developer Internship 2024- Present
+            <h3>End Time Harvest Entertainment Studios </h3> 
+            <h4>Web Developer Internship </h4> Minneapolis, MN 2024- Present
             • Architecting elegant user interfaces with HTML, CSS, and JavaScript to optimize usability and engagement.
             • Harnessing cutting-edge front-end frameworks like React, Angular, or Vue.js to construct dynamic and
             immersive web applications.
@@ -199,7 +199,7 @@ no react
             • Troubleshot local network issues. Escalated the issue if it requires the network team assistance.
             • Mange, and order laptop/desktop whenever necessary.
         </div>
-
+    </div>
     </div>
     <script src="js/slider.js"></script>
     <script src="js/script.js"></script>
