update css add animation

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,10 +6,6 @@
 
 -: JS going backward error something wrong with if 
 
--: Do project page as many project instead of one
-
-
--: Js css animation!
 -->
 
 
@@ -19,7 +15,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Koua Portfolio</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/portfolio/css/style.css">
+    <link rel="stylesheet" href="/portfolio/css/animation.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
 </header>
@@ -192,9 +189,9 @@
     </div>
     </div>
     </div>
-    <script src="js/slider.js"></script>
-    <script src="js/script.js"></script>
-    <script src="js/experience.js"></script>
+    <script src="/portfolio/js/slider.js"></script>
+    <script src="/portfolio/js/script.js"></script>
+    <script src="/portfolio/js/experience.js"></script>
 </body>
 
 </html>
