--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
         <h2>Projects</h2>
         <div class="container ">
             <br>
-            <div class="panel active" style="background-image: url('img/eth.JPG')">
+            <div class="panel active" style="background-image: url('/portfolio/img/eth.JPG')">
                 <h3> <a href="https://ethmediacreate.com/">ETH Media Create Website</a></h3>
             </div>
-            <div class="panel" style="background-image: url('img/lakefinder.JPG')">
+            <div class="panel" style="background-image: url('/portfolio/img/lakefinder.JPG')">
                 <h3><a href="https://kthao91.github.io/LakeFinder/">Lake Finder</a></h3>
             </div>
-            <div class="panel" style="background-image: url('img/ava.jpg')">
+            <div class="panel" style="background-image: url('/portfolio/img/ava.jpg')">
                 <h3><a href="https://avatotoe.com/">Ava Totoe</a>
             </div>
-            <div class="panel" style="background-image: url('img/maia.jpg')">
+            <div class="panel" style="background-image: url('/portfolio/img/maia.jpg')">
                 <h3><a href="https://maiatotoe.com/">Maia Totoe</a>
             </div>
 
