--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,5 +1,32 @@
 <!--
 
+HEX
+
+#f5e08f
+
+RGB
+
+245, 224, 143
+
+CMYK
+
+0, 9, 42, 4
+
+
+
+HEX
+
+#8fa4f5
+
+RGB
+
+143, 164, 245
+
+CMYK
+
+42, 33, 0, 4
+
+
 ----------------TODO------------------
 
 -: Add img of person in img
@@ -18,6 +45,9 @@
     <link rel="stylesheet" href="/portfolio/css/style.css">
     <link rel="stylesheet" href="/portfolio/css/animation.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
 </header>
 
@@ -188,7 +218,7 @@
         </div>
     </div>
     </div>
-    </div>
+    
     <script src="/portfolio/js/slider.js"></script>
     <script src="/portfolio/js/script.js"></script>
     <script src="/portfolio/js/experience.js"></script>
