fix nav bar to liking, animation sort of complete

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -43,7 +43,7 @@ CMYK
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Koua Portfolio</title>
     <link rel="stylesheet" href="/portfolio/css/style.css">
-    <link rel="stylesheet" href="/portfolio/css/animation.css">
+   
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -57,7 +57,8 @@ CMYK
     <button onclick="nextSide(+1)" id="right">&#8594</button>
 
 
-    <nav>
+    <div class="nav">
+        
         <ul>
             <li><a title="home" href="#" onclick="getSide(0); return false;">Home</a></li>
 
@@ -70,10 +71,10 @@ CMYK
 
             <!--Put link of resume -->
 
-            <a href="files/Koua%20Thao%20Resume%202024.pdf">Resume</a>
+            <li><a href="files/Koua%20Thao%20Resume%202024.pdf">Resume</a></li>
 
         </ul>
-    </nav>
+    </div>
 
 
     <!--See if img is better-->
