--- a/index.html
+++ b/index.html
@@ -1,5 +1,32 @@
 <!--
 
+HEX
+
+#f5e08f
+
+RGB
+
+245, 224, 143
+
+CMYK
+
+0, 9, 42, 4
+
+
+
+HEX
+
+#8fa4f5
+
+RGB
+
+143, 164, 245
+
+CMYK
+
+42, 33, 0, 4
+
+
 ----------------TODO------------------
 
 -: Add img of person in img
@@ -16,8 +43,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Koua Portfolio</title>
     <link rel="stylesheet" href="/portfolio/css/style.css">
-    <link rel="stylesheet" href="/portfolio/css/animation.css">
+   
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
 </header>
 
@@ -27,7 +57,8 @@
     <button onclick="nextSide(+1)" id="right">&#8594</button>
 
 
-    <nav>
+    <div class="nav">
+        
         <ul>
             <li><a title="home" href="#" onclick="getSide(0); return false;">Home</a></li>
 
@@ -40,10 +71,10 @@
 
             <!--Put link of resume -->
 
-            <a href="files/Koua%20Thao%20Resume%202024.pdf">Resume</a>
+            <li><a href="files/Koua%20Thao%20Resume%202024.pdf">Resume</a></li>
 
         </ul>
-    </nav>
+    </div>
 
 
     <!--See if img is better-->
@@ -58,16 +89,16 @@
         <h2>Projects</h2>
         <div class="container ">
             <br>
-            <div class="panel active" style="background-image: url('/portfolio/img/eth.JPG')">
+            <div class="panel active" style="background-image: url('img/eth.JPG')">
                 <h3> <a href="https://ethmediacreate.com/">ETH Media Create Website</a></h3>
             </div>
-            <div class="panel" style="background-image: url('/portfolio/img/lakefinder.JPG')">
+            <div class="panel" style="background-image: url('img/lakefinder.JPG')">
                 <h3><a href="https://kthao91.github.io/LakeFinder/">Lake Finder</a></h3>
             </div>
-            <div class="panel" style="background-image: url('/portfolio/img/ava.jpg')">
+            <div class="panel" style="background-image: url('img/ava.jpg')">
                 <h3><a href="https://avatotoe.com/">Ava Totoe</a>
             </div>
-            <div class="panel" style="background-image: url('/portfolio/img/maia.jpg')">
+            <div class="panel" style="background-image: url('img/maia.jpg')">
                 <h3><a href="https://maiatotoe.com/">Maia Totoe</a>
             </div>
 
@@ -188,7 +219,7 @@
         </div>
     </div>
     </div>
-    </div>
+    
     <script src="/portfolio/js/slider.js"></script>
     <script src="/portfolio/js/script.js"></script>
     <script src="/portfolio/js/experience.js"></script>
