--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
                 <li><a href="#resume">Resume</a></li>
             </ul>        
         </nav>
-        <canvas id="matrix" class="hero">
+        <canvas id="matrix"></canvas>
+        <div class="hero">
             <h1>Koua Thao</h1>
             <div class="cycle">
                 <h2>Hacker</h2>
@@ -34,7 +35,7 @@
                 <h2>Full Stack Devloper</h2>
                 <h2>Artist</h2>
             </div>
-        </canvas>
+        </div>
 
         <div id="projects" class="projects">
             <div class="web">
