adding react.js

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <link rel="icon" href="Journal.png" />
         <link rel="apple-touch-icon" href="Journal.png" />
         <link rel="stylesheet" href="style.css" />
-
+        <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+        <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     </head>
 
     <body>
@@ -26,7 +27,7 @@
         </nav>
         <canvas id="matrix"></canvas>
         <div class="hero">
-            <h1>Koua Thao</h1>
+            <h1 id="name">Koua Thao</h1>
             <div class="cycle">
                 <h2>Hacker</h2>
                 <h2>Software Engineer</h2>
@@ -69,6 +70,7 @@
         </div>
 
 
-        <script type="text/javascript" src="matrix.js"></script>
+        <script type="text/javascript" src="javascripts/matrix.js"></script>
+        <!--<script type="text/javascript" src="javascripts/"></script>-->
     </body>
 </html>
