Hero img section done
Added an img folder
Added BSOD
update the matrix to do this reboot screen thing
fix up the css a tad bit

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <title>Koua's Portfolio</title>
         <meta charset="utf-8" />
         <meta name="description" content="Koua Thao Portfolio Showing what he had done and what he learn"/>
-        <link rel="icon" href="Journal.png" />
-        <link rel="apple-touch-icon" href="Journal.png" />
+        <link rel="icon" href="img/Journal.png" />
+        <link rel="apple-touch-icon" href="img/Journal.png" />
         <link rel="stylesheet" href="style.css" />
         <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
         <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
@@ -30,7 +30,7 @@
         </nav>
         <canvas id="matrix"></canvas>
         <div class="hero">
-            <h1 id="name">Koua Thao</h1>
+            <span id="name"></span>
             <div class="cycle">
                 <h2>Hacker</h2>
                 <h2>Software Engineer</h2>
@@ -78,9 +78,10 @@
         
         <script type="text/babel" src="javascripts/render.js"></script>
         <script type="text/babel" src="index.js"> </script>   
-             <!--
+       
         <script type="text/javascript" src="javascripts/matrix.js"></script>
-        <script type="text/javascript" src="javascripts/"></script>
+        <script type="text/javascript" src="javascripts/writing_name.js"></script>
+        <!--  <script type="text/javascript" src="javascripts/"></script>
         -->
     </body>
 </html>
