--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <meta name="description" content="Koua Thao Portfolio Showing what he had done and what he learn"/>
         <link rel="icon" href="Journal.png" />
         <link rel="apple-touch-icon" href="Journal.png" />
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="css/style.css" />
 
     </head>
 
@@ -69,6 +69,6 @@
         </div>
 
 
-        <script type="text/javascript" src="matrix.js"></script>
+        <script type="text/javascript" src="js/matrix.js"></script>
     </body>
 </html>
