Change a few things

--- a/index.html
+++ b/index.html
@@ -23,20 +23,22 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#resume">Resume</a></li>
+                <li><a href="mailto: kthao91@live.com">Contact Me</a>
             </ul>        
         </nav>
+
+        <!--The hero img and my name-->
         <canvas id="matrix"></canvas>
         <div class="hero">
             <div class="nothing">
                 <h1><span id="name"></span></h1>
             
-            <h2> I am a <span id="title"></span></h2>
+            <h2><span id="title"></span></h2>
         </div>
         </div>
 
-        <div id="root"></div>
-        
-        <div id="projects" class="projects">
+        <!--Showing off my project-->
+        <div id="projects" class="projects folder">
             <div class="web">
                 <div class="ETH">
                     <div class="ethmediacreate">
